fix tab styling and alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -119,7 +119,7 @@ Newsfeed
   height: 30px;
   position: fixed;
   left: 10px;
-  top: 403px;
+  top: 433px;
   /*border-top: 2px solid black;*/
   /*background-color: yellow;*/
   -webkit-border-top-left-radius: 10px;
@@ -140,7 +140,7 @@ Newsfeed
   height: 30px;
   position: fixed;
   left: 10px;
-  top: 200px;
+  top: 230px;
   /*border: 2px solid black;*/
   /*background-color: yellow;*/
   -webkit-border-top-left-radius: 10px;
